[project]
name = "api-demo"
version = "0.3.1"
authors = [{ name = "Michael Swisher", email = "swishertmichael@gmail.com" }]
readme = "README.md"
repository = "https://github.com/mtswishr/api-demo"
dependencies = [
  'requests="2.31.0"',
  "click=8.1.7",
  "python-dotenv=1.0.1"
]
requires-python = ">= 3.10"

[project.scripts]
bird = "main:lookup_num"
album = "main:get_photos"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
